@@ -141,3 +141,5 @@ LeadNbLead=Nb lead
 LeadNbLeadByMonth=Nb lead by month
 LeadAmountOfLead=Lead amount
 LeadAmountOfLeadsByMonth=lead amount by month
+LeadTransRateOfLead=Transformation rate
+LeadTransRateOfLeadsByMonth=Transformation rate by month
