@@ -141,3 +141,5 @@ LeadNbLead=Nb Affaires
 LeadNbLeadByMonth=Nb Affaires par mois
 LeadAmountOfLead=Montant des affaires
 LeadAmountOfLeadsByMonth=Montant des affaires par mois
+LeadTransRateOfLead=Taux de transformation
+LeadTransRateOfLeadsByMonth=Taux de transformation par mois
