@@ -28,6 +28,8 @@ date_closure 		datetime NOT NULL,
 amount_prosp 		double(24,8) NOT NULL,
 fk_user_resp 		integer NOT NULL,
 description 		text,
+note_public 		text,
+note_private 		text,
 fk_user_author		integer	NOT NULL,
 datec			datetime  NOT NULL,
 fk_user_mod 		integer NOT NULL,
